# postal-code-id-ingester

./: .gitignore  README.md  pyproject.toml
src/postal_code_id_ingester/: cli.py
src/postal_code_id_ingester/export/: jsonl.py  resume.py
src/postal_code_id_ingester/ingest/: failed_loader.py  fetcher.py  override_loader.py  region_id_loader.py
src/postal_code_id_ingester/matchers/: region_matcher.py
src/postal_code_id_ingester/model/: augmented.py  village.py
src/postal_code_id_ingester/policy/: retry_policy.py
src/postal_code_id_ingester/query/: keywords.py
src/postal_code_id_ingester/sources/: pos_indonesia.py
